--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <!-- HERO -->
-  <section class="hero">
+  <section class="hero" id="about">
     <div class="hero-left">
       <img src="images/sakura-1.jpg" alt="Sakura Tea">
       <span class="jp-char">あ</span>
@@ -33,7 +33,7 @@
   </section>
 
   <!-- MENU -->
-  <section class="menu">
+  <section class="menu" id="menu">
     <h2>Menu</h2>
 
     <div class="menu-content">
@@ -52,7 +52,7 @@
   </section>
 
   <!-- GALLERY -->
-  <section class="gallery">
+  <section class="gallery" id="gallery">
     <h2>Gallery</h2>
 
     <div class="gallery-grid">
@@ -63,4 +63,16 @@
   </section>
 
 </body>
+  <nav class="navbar">
+  <div class="nav-left">sakura</div>
+
+  <ul class="nav-center">
+    <li><a href="#about">about</a></li>
+    <li><a href="#menu">menu</a></li>
+    <li><a href="#gallery">gallery</a></li>
+  </ul>
+
+  <div class="nav-right">予約</div>
+</nav>
+
 </html>
