--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Sakura</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Mea+Culpa&family=Cormorant+Infant:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Cormorant+Infant:wght@300;400&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
   
