--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Sakura</title>
+  <title>Hiên nhà Đào Yêu Ngân Phỉ </title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=Cormorant+Infant:wght@300;400&display=swap" rel="stylesheet">
@@ -11,15 +11,14 @@
   
   </body>
   <nav class="navbar">
-  <div class="nav-left">sakura</div>
+  <div class="nav-left">Đào Yêu Ngân Phỉ</div>
 
   <ul class="nav-center">
-    <li><a href="#about">about</a></li>
+    <li><a href="#about">giới thiệu</a></li>
     <li><a href="#menu">menu</a></li>
     <li><a href="#gallery">gallery</a></li>
   </ul>
 
-  <div class="nav-right">予約</div>
 </nav>
 
 </head>
@@ -36,8 +35,10 @@
       <div class="sun"></div>
       <h1>Sakura</h1>
       <p>
-        Sakura is a fleeting moment — a memory of softness,
-        something that blooms once and never repeats.
+        Ồ, mưa lớn thật... Bạn ghé vào trú mưa đúng không? <br>
+        Vừa hay đến giờ trà chiều, nếu không có việc gấp, ở lại đây chơi một chút nhé? <br>
+
+        Mưa kiểu này chắc sẽ không tạnh ngay đâu, à, trà còn nóng đó, uống cho ấm người trước đã. <br>
       </p>
     </div>
 
