--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <div class="hero-center">
       <div class="sun"></div>
-      <h1>Sakura</h1>
+      <h1>xin chào~</h1>
       <p>
-        Ồ, mưa lớn thật... Bạn ghé vào trú mưa đúng không? <br>
-        Vừa hay đến giờ trà chiều, nếu không có việc gấp, ở lại đây chơi một chút nhé? <br>
+        Ồ, mưa lớn thật đó... Bạn ghé đây vào trú mưa đúng không? <br>
+        Vừa hay đến giờ trà chiều, nếu không có việc gấp thì ở lại đây chơi một chút nha? <br>
 
-        Mưa kiểu này chắc sẽ không tạnh ngay đâu, à, trà còn nóng đó, uống cho ấm người trước đã. <br>
+        Mưa kiểu này chắc sẽ không tạnh ngay đâu... à, trà còn nóng đó, uống cho ấm người trước đã. <br>
       </p>
     </div>
 
