--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 
     <div class="hero-center">
       <div class="sun"></div>
-      <h1>xin chào</h1>
+      <h1>Oh, hello there</h1>
       <p>
-        ồ, mưa lớn thật đó... bạn ghé đây vào trú mưa đúng không? <br>
-        vừa hay đến giờ trà chiều, nếu không có việc gấp thì ở lại đây chơi một chút nha? <br>
-
-        mưa kiểu này chắc sẽ không tạnh ngay đâu... à, trà còn nóng đó, uống cho ấm người trước đã. <br>
+        You’ve just arrived, haven’t you? <br>
+        Standing out in the rain like that, won’t you get soaked? <br>
+        I’ve just prepared some hot tea, do have a little, it will warm you up! <br>
+        
+        Sit for a moment, the rain should ease up soon. <br>
       </p>
     </div>
 
