--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <div class="nav-left">Đào Yêu Ngân Phỉ</div>
 
   <ul class="nav-center">
-    <li><a href="#about">giới thiệu</a></li>
-    <li><a href="#menu">menu</a></li>
+    <li><a href="#menu">about me</a></li>
     <li><a href="#gallery">gallery</a></li>
   </ul>
 
@@ -25,7 +24,7 @@
 <body>
 
   <!-- HERO -->
-  <section class="hero" id="about">
+  <section class="hero">
     <div class="hero-left">
       <img src="images/sakura-1.jpg" alt="Sakura Tea">
       <span class="jp-char">あ</span>
@@ -33,13 +32,13 @@
 
     <div class="hero-center">
       <div class="sun"></div>
-      <h1>Oh, hello there</h1>
-      <p>
-        You’ve just arrived, haven’t you? <br>
-        Standing out in the rain like that, won’t you get soaked? <br>
-        I’ve just prepared some hot tea, do have a little, it will warm you up! <br>
+      <h1>oh, hello there</h1>
+      <p class="intro">
+        you’ve just arrived, haven’t you? <br>
+        standing out in the rain like that, won’t you get soaked? <br>
+        i’ve just prepared some hot tea... do have a little, it will warm you up! <br>
         
-        Sit for a moment, the rain should ease up soon. <br>
+        sit for a moment, the rain should ease up soon~ <br>
       </p>
     </div>
 
@@ -48,24 +47,41 @@
     </div>
   </section>
 
-  <!-- MENU -->
-  <section class="menu" id="menu">
-    <h2>Menu</h2>
+  <!-- MENU / ABOUT -->
+<section class="menu" id="menu">
+  <h2>while you're here</h2>
 
-    <div class="menu-content">
-      <img src="images/temple.jpg" alt="Temple">
+  <p class="intro">
+    perhaps I should tell you a little —<br>
+    nothing too serious, just enough to pass the time while the tea cools.
+  </p>
 
-      <div class="menu-text">
-        <p>
-          Inspired by traditional Japanese cuisine,
-          our menu celebrates simplicity, balance,
-          and quiet beauty.
-        </p>
-      </div>
+  <div class="menu-content">
+    <!-- left image -->
+    <img src="images/temple.jpg" alt="Temple">
 
-      <img src="images/chef.jpg" alt="Chef">
+    <!-- text block -->
+    <div class="menu-text">
+      <section class="general">
+        <ul class="facts">
+          <li><span class="icon">✦</span><strong>name</strong> Tầm Nhiễm</li>
+          <li><span class="icon">✦</span><strong>pseudonym</strong> Đào Yêu Ngân Phỉ <em>(桃夭銀霏)</em></li>
+          <li><span class="icon">✦</span><strong>english name</strong> Gertrude</li>
+          <li><span class="icon">✦</span><strong>age</strong> in my twenties</li>
+          <li><span class="icon">✦</span><strong>language</strong> Vietnamese (native), English, Italiano, 日本語, 中文</li>
+          <li><span class="icon">✦</span><strong>relationship</strong> comet relationship, platonic partner</li>
+          <li><span class="icon">✦</span><strong>occupation</strong> student, painter & writer</li>
+          <li><span class="icon">✦</span><strong>signature feature</strong> a red mole beneath my left eye</li>
+          <li><span class="icon">✦</span><strong>aesthetic</strong> hime bangs, long black hair, feminine office wear</li>
+          <li><span class="icon">✦</span><strong>bias</strong> My Melody, Emily Dyer</li>
+        </ul>
+      </section>
     </div>
-  </section>
+
+    <!-- right image -->
+    <img src="images/chef.jpg" alt="Chef">
+  </div>
+</section>
 
   <!-- GALLERY -->
   <section class="gallery" id="gallery">
