--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="hero">
     <div class="hero-left">
       <img src="images/sakura-1.jpg" alt="Sakura Tea">
-      <span class="jp-char">あ</span>
+      <span class="jp-char">愛</span>
     </div>
 
     <div class="hero-center">
@@ -85,7 +85,7 @@
 
   <!-- GALLERY -->
   <section class="gallery" id="gallery">
-    <h2>Gallery</h2>
+    <h2>library</h2>
 
     <div class="gallery-grid">
       <img src="images/sakura-1.jpg">
