--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <title>Hiên nhà Đào Yêu Ngân Phỉ </title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=Cormorant+Infant:wght@300;400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho&family=Ballet&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
   
