--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         you’ve just arrived, haven’t you? <br>
         standing out in the rain like that, won’t you get soaked? <br>
         i’ve just prepared some hot tea... do have a little, it will warm you up! <br>
-        
+        🍵 <br>
         sit for a moment, the rain should ease up soon~ <br>
       </p>
     </div>
@@ -78,6 +78,15 @@
           <li><span class="icon">✦</span><strong>aesthetic</strong> hime bangs, long black hair, feminine office wear</li>
           <li><span class="icon">✦</span><strong>bias</strong> My Melody, Emily Dyer</li>
         </ul>
+
+        <p class="intro">
+          i live by making art - writing, painting, and dancing, all at once.<br>
+          and on certain days, when the mood feels right... i simply turn into a tiny cat spirit!!! <br>
+          wandering off to collect ideas like any well-behaved little cat would~ <br>
+          🐾 <br>
+          now, if you don’t mind, shall we move along? <br>
+  </p>
+        
       </section>
     </div>
 
