--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <!-- GALLERY -->
   <section class="gallery" id="gallery">
-    <h2>library</h2>
+    <h2>the library awaits</h2>
 
     <div class="gallery-grid">
       <img src="images/sakura-1.jpg">
