--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <img src="images/chef.jpg" alt="Chef">
   </div>
 
+  <div class="menu-text">
   <p class="intro">
           i live by making art - writing, painting, and dancing, all at once.<br>
           and on certain days, when the mood feels right... i simply turn into a tiny cat spirit!!! <br>
@@ -92,6 +93,7 @@
           🐾 <br>
           now, if you don’t mind, shall we move along? <br>
   </p>
+  </div>
 </section>
   
   <!-- GALLERY -->
