--- a/index.html
+++ b/index.html
@@ -80,22 +80,27 @@
         </ul>
       </section>
     </div>
-    
+
     <!-- right image -->
     <img src="images/chef.jpg" alt="Chef">
   </div>
 
-  <div class="menu-text">
-  <p class="intro">
-          i live by making art - writing, painting, and dancing, all at once.<br>
-          and on certain days, when the mood feels right... i simply turn into a tiny cat spirit!!! <br>
-          wandering off to collect ideas like any well-behaved little cat would~ <br>
-          🐾 <br>
-          now, if you don’t mind, shall we move along? <br>
-  </p>
+  <!-- ✨ đoạn tâm sự -->
+  <div class="menu-after">
+    <p>
+      i live by making art — writing, painting, and dancing, all at once.<br>
+      and on certain days, when the mood feels right,<br>
+      i simply turn into a tiny cat spirit,<br>
+      wandering off to collect ideas like any well-behaved little cat would. 🐾
+    </p>
+
+    <p class="invite">
+      now, if you don’t mind,<br>
+      shall we move along?
+    </p>
   </div>
 </section>
-  
+
   <!-- GALLERY -->
   <section class="gallery" id="gallery">
     <h2>the library awaits</h2>
