--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
     <img src="images/chef.jpg" alt="Chef">
   </div>
 
-  <!-- ✨ đoạn tâm sự -->
-  <div class="menu-after">
-    <p>
-      i live by making art — writing, painting, and dancing, all at once.<br>
-      and on certain days, when the mood feels right,<br>
-      i simply turn into a tiny cat spirit,<br>
-      wandering off to collect ideas like any well-behaved little cat would. 🐾
-    </p>
+  <!-- đoạn tâm sự -->
+<div class="menu-after">
+  <p class="monologue">
+    i live by making art — writing, painting, and dancing, all at once.<br>
+    and on certain days, when the mood feels right,<br>
+    i simply turn into a tiny cat spirit,<br>
+    wandering off to collect ideas like any well-behaved little cat would. 🐾
+  </p>
 
-    <p class="invite">
-      now, if you don’t mind,<br>
-      shall we move along?
-    </p>
-  </div>
+  <p class="invite">
+    now, if you don’t mind,<br>
+    shall we move along?
+  </p>
+</div>
 </section>
 
   <!-- GALLERY -->
