--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
     i live by making art — writing, painting, and dancing, all at once.<br>
     and on certain days, when the mood feels right,<br>
     i simply turn into a tiny cat spirit,<br>
-    wandering off to collect ideas like any well-behaved little cat would. 🐾
+    wandering off to collect ideas like any well-behaved little cat would. <br>
+    🐾
   </p>
 
   <p class="invite">
