--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
 </head>
 <body>
+  
+  <!-- EFFECT LAYERS -->
+<div class="dust-layer"></div>
+<div class="petal-layer"></div>
 
   <!-- HERO -->
   <section class="hero">
