--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <link rel="stylesheet" href="style.css">
   
+  <script src="script.js"></script>
+  
   </body>
   <nav class="navbar">
   <div class="nav-left">Đào Yêu Ngân Phỉ</div>
