--- a/index.html
+++ b/index.html
@@ -2,35 +2,30 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Hiên nhà Đào Yêu Ngân Phỉ </title>
+  <title>Hiên nhà Đào Yêu Ngân Phỉ</title>
 
   <!-- Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-<link href="https://fonts.googleapis.com/css2?family=Yuji+Syuku&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Yuji+Syuku&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
-  
-  <script src="script.js"></script>
-  
-  </body>
-  <nav class="navbar">
-  <div class="nav-left">Đào Yêu Ngân Phỉ</div>
-
-  <ul class="nav-center">
-    <li><a href="#menu">about me</a></li>
-    <li><a href="#gallery">gallery</a></li>
-  </ul>
-
-</nav>
-
 </head>
+
 <body>
-  
+
   <!-- EFFECT LAYERS -->
-<div class="dust-layer"></div>
-<div class="petal-layer"></div>
+  <div class="dust-layer"></div>
+  <div class="petal-layer"></div>
+
+  <!-- NAV -->
+  <nav class="navbar">
+    <div class="nav-left">Đào Yêu Ngân Phỉ</div>
+    <ul class="nav-center">
+      <li><a href="#menu">about me</a></li>
+      <li><a href="#gallery">gallery</a></li>
+    </ul>
+  </nav>
 
   <!-- HERO -->
   <section class="hero">
@@ -56,67 +51,54 @@
     </div>
   </section>
 
-  <!-- MENU / ABOUT -->
-<section class="menu" id="menu">
-  <h2>while you're here</h2>
+  <!-- MENU -->
+  <section class="menu" id="menu">
+    <h2>while you're here</h2>
+    <p class="intro">
+      perhaps I should tell you a little —<br>
+      nothing too serious, just enough to pass the time while the tea cools.
+    </p>
 
-  <p class="intro">
-    perhaps I should tell you a little —<br>
-    nothing too serious, just enough to pass the time while the tea cools.
-  </p>
+    <div class="menu-content">
+      <img src="images/temple.jpg" alt="Temple">
 
-  <div class="menu-content">
-    <!-- left image -->
-    <img src="images/temple.jpg" alt="Temple">
+      <div class="menu-text">
+        <section class="general">
+          <ul class="facts">
+            <li><span class="icon">✦</span><strong>name</strong> Tầm Nhiễm</li>
+            <li><span class="icon">✦</span><strong>pseudonym</strong> Đào Yêu Ngân Phỉ <em>(桃夭銀霏)</em></li>
+            <li><span class="icon">✦</span><strong>english name</strong> Gertrude</li>
+            <li><span class="icon">✦</span><strong>age</strong> in my twenties</li>
+            <li><span class="icon">✦</span><strong>language</strong> Vietnamese (native), English, Italiano, 日本語, 中文</li>
+            <li><span class="icon">✦</span><strong>relationship</strong> comet relationship, platonic partner</li>
+            <li><span class="icon">✦</span><strong>occupation</strong> student, painter & writer</li>
+            <li><span class="icon">✦</span><strong>signature feature</strong> a red mole beneath my left eye</li>
+            <li><span class="icon">✦</span><strong>aesthetic</strong> hime bangs, long black hair, feminine office wear</li>
+            <li><span class="icon">✦</span><strong>bias</strong> My Melody, Emily Dyer</li>
+          </ul>
+        </section>
+      </div>
 
-    <!-- text block -->
-    <div class="menu-text">
-      <section class="general">
-        <ul class="facts">
-          <li><span class="icon">✦</span><strong>name</strong> Tầm Nhiễm</li>
-          <li><span class="icon">✦</span><strong>pseudonym</strong> Đào Yêu Ngân Phỉ <em>(桃夭銀霏)</em></li>
-          <li><span class="icon">✦</span><strong>english name</strong> Gertrude</li>
-          <li><span class="icon">✦</span><strong>age</strong> in my twenties</li>
-          <li><span class="icon">✦</span><strong>language</strong> Vietnamese (native), English, Italiano, 日本語, 中文</li>
-          <li><span class="icon">✦</span><strong>relationship</strong> comet relationship, platonic partner</li>
-          <li><span class="icon">✦</span><strong>occupation</strong> student, painter & writer</li>
-          <li><span class="icon">✦</span><strong>signature feature</strong> a red mole beneath my left eye</li>
-          <li><span class="icon">✦</span><strong>aesthetic</strong> hime bangs, long black hair, feminine office wear</li>
-          <li><span class="icon">✦</span><strong>bias</strong> My Melody, Emily Dyer</li>
-        </ul>
-      </section>
+      <img src="images/chef.jpg" alt="Chef">
     </div>
 
-    <!-- right image -->
-    <img src="images/chef.jpg" alt="Chef">
-  </div>
+    <div class="menu-after">
+      <p class="monologue">
+        i live by making art — writing, painting, and dancing, all at once.<br>
+        and on certain days, when the mood feels right,<br>
+        i simply turn into a tiny cat spirit,<br>
+        wandering off to collect ideas like any well-behaved little cat would. 🐾
+      </p>
 
-  <!-- đoạn tâm sự -->
-<div class="menu-after">
-  <p class="monologue">
-    i live by making art — writing, painting, and dancing, all at once.<br>
-    and on certain days, when the mood feels right,<br>
-    i simply turn into a tiny cat spirit,<br>
-    wandering off to collect ideas like any well-behaved little cat would. <br>
-    🐾
-  </p>
-
-  <p class="invite">
-    now, if you don’t mind,<br>
-    shall we move along?
-  </p>
-</div>
-</section>
+      <p class="invite">
+        now, if you don’t mind,<br>
+        shall we move along?
+      </p>
+    </div>
+  </section>
 
   <!-- GALLERY -->
   <section class="gallery" id="gallery">
     <h2>the library awaits</h2>
-
     <div class="gallery-grid">
-      <img src="images/sakura-1.jpg">
-      <img src="images/food.jpg">
-      <img src="images/sakura-2.jpg">
-    </div>
-  </section>
-
-</html>
+      <img src="images/sakur
