--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- NAV -->
   <nav class="navbar">
     <div class="nav-left">Đào Yêu Ngân Phỉ</div>
+
     <ul class="nav-center">
       <li><a href="#menu">about me</a></li>
       <li><a href="#gallery">gallery</a></li>
@@ -51,17 +52,20 @@
     </div>
   </section>
 
-  <!-- MENU -->
+  <!-- MENU / ABOUT -->
   <section class="menu" id="menu">
     <h2>while you're here</h2>
+
     <p class="intro">
       perhaps I should tell you a little —<br>
       nothing too serious, just enough to pass the time while the tea cools.
     </p>
 
     <div class="menu-content">
+      <!-- left image -->
       <img src="images/temple.jpg" alt="Temple">
 
+      <!-- text block -->
       <div class="menu-text">
         <section class="general">
           <ul class="facts">
@@ -79,15 +83,18 @@
         </section>
       </div>
 
+      <!-- right image -->
       <img src="images/chef.jpg" alt="Chef">
     </div>
 
+    <!-- đoạn tâm sự -->
     <div class="menu-after">
       <p class="monologue">
         i live by making art — writing, painting, and dancing, all at once.<br>
         and on certain days, when the mood feels right,<br>
         i simply turn into a tiny cat spirit,<br>
-        wandering off to collect ideas like any well-behaved little cat would. 🐾
+        wandering off to collect ideas like any well-behaved little cat would. <br>
+        🐾
       </p>
 
       <p class="invite">
@@ -100,5 +107,15 @@
   <!-- GALLERY -->
   <section class="gallery" id="gallery">
     <h2>the library awaits</h2>
+
     <div class="gallery-grid">
-      <img src="images/sakur
+      <img src="images/sakura-1.jpg">
+      <img src="images/food.jpg">
+      <img src="images/sakura-2.jpg">
+    </div>
+  </section>
+
+  <!-- SCRIPT -->
+  <script src="script.js"></script>
+</body>
+</html>
