--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Hiên nhà Đào Yêu Ngân Phỉ</title>
+  <title>The Quiet Veranda of Dao Yeu Ngan Phi</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,8 @@
 
   <!-- NAV -->
   <nav class="navbar">
-    <div class="nav-left">Đào Yêu Ngân Phỉ</div>
-
+    <div class="nav-left">Dao Yeu Ngan Phi</div>
+    <div class="nav-right">within a quiet pavilion of ink and paper</div>
     <ul class="nav-center">
       <li><a href="#menu">about me</a></li>
       <li><a href="#gallery">gallery</a></li>
