--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="#menu">about me</a></li>
       <li><a href="#gallery">gallery</a></li>
     </ul>
-     <div class="nav-right">within a quiet pavilion of ink and paper</div>
+     <div class="nav-right">a quiet veranda of ink and paper</div>
   </nav>
 
   <!-- HERO -->
