--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     </div>
   </section>
 
+  <div class="divider"></div>
+
   <!-- MENU / ABOUT -->
   <section class="menu" id="menu">
     <h2>while you're here</h2>
@@ -103,6 +105,8 @@
       </p>
     </div>
   </section>
+
+  <div class="divider"></div>
 
   <!-- GALLERY -->
   <section class="gallery" id="gallery">
