--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   <div class="dust-layer"></div>
   <div class="petal-layer"></div>
 
+  <!-- FRAME -->
+  <div class="book-frame">
+    <nav class="navbar">...</nav>
+    <section class="hero">...</section>
+    <div class="divider"></div>
+    <section class="menu">...</section>
+    <div class="divider"></div>
+    <section class="gallery">...</section>
+  </div>
+  
   <!-- NAV -->
   <nav class="navbar">
     <div class="nav-left">Dao Yeu Ngan Phi</div>
