--- a/index.html
+++ b/index.html
@@ -73,16 +73,13 @@
       <div class="menu-text">
         <section class="general">
           <ul class="facts">
-            <li><span class="icon">✦</span><strong>name</strong> Tầm Nhiễm</li>
             <li><span class="icon">✦</span><strong>pseudonym</strong> Đào Yêu Ngân Phỉ <em>(桃夭銀霏)</em></li>
-            <li><span class="icon">✦</span><strong>english name</strong> Gertrude</li>
-            <li><span class="icon">✦</span><strong>age</strong> in my twenties</li>
-            <li><span class="icon">✦</span><strong>language</strong> Vietnamese (native), English, Italiano, 日本語, 中文</li>
-            <li><span class="icon">✦</span><strong>relationship</strong> comet relationship, platonic partner</li>
-            <li><span class="icon">✦</span><strong>occupation</strong> student, painter & writer</li>
-            <li><span class="icon">✦</span><strong>signature feature</strong> a red mole beneath my left eye</li>
-            <li><span class="icon">✦</span><strong>aesthetic</strong> hime bangs, long black hair, feminine office wear</li>
-            <li><span class="icon">✦</span><strong>bias</strong> My Melody, Emily Dyer</li>
+            <li><span class="icon">✦</span><strong>english name</strong> Gertrude </li>
+            <li><span class="icon">✦</span><strong>age</strong> in my twenties </li>
+            <li><span class="icon">✦</span><strong>occupation</strong> visual artist - author </li>
+            <li><span class="icon">✦</span><strong>language</strong> Vietnamese, English, Italiano, 日本語, 中文 </li>
+            <li><span class="icon">✦</span><strong>relationship</strong> comet relationship, platonic partner </li>
+            <li><span class="icon">✦</span><strong>signature feature</strong> a red mole beneath my left eye </li>
           </ul>
         </section>
       </div>
