--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Yuji+Syuku&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  href="https://fonts.googleapis.com/css2?family=Yuji+Syuku&family=Mrs+Saint+Delafield&display=swap"
+  rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 </head>
